name:                machines-wordgame
version:             0.1.0.0
author:              Ben James
category:            Game
copyright:           Ben James 2014
build-type:          Simple
cabal-version:       >=1.10

executable machines-wordgame
  main-is:             Main.hs
  other-extensions:    Rank2Types
  build-depends:       base >=4.7 && <4.8
                     , transformers >=0.3 && <0.4
                     , machines >=0.2 && <0.3
  default-language:    Haskell2010
